# aik_solvers

./: README.md
aik_constraint/: CMakeLists.txt  package.xml
aik_constraint/include/aik_constraint/: AngularMomentumConstraint.h  COMConstraint.h  COMVelocityConstraint.h  ClientCollisionConstraint.h  CollisionConstraint.h  IKConstraint.h  Jacobian.h  JointAngleConstraint.h  JointLimitConstraint.h  PositionConstraint.h
aik_constraint/src/: AngularMomentumConstraint.cpp  COMConstraint.cpp  ClientCollisionConstraint.cpp  CollisionConstraint.cpp  IKConstraint.cpp  Jacobian.cpp  JointAngleConstraint.cpp  JointLimitConstraint.cpp  PositionConstraint.cpp
aik_constraint_joint_limit_table/: CMakeLists.txt  package.xml
aik_constraint_joint_limit_table/include/aik_constraint_joint_limit_table/: JointLimitMinMaxTableConstraint.h
aik_constraint_joint_limit_table/src/: JointLimitMinMaxTableConstraint.cpp
aik_constraint_vclip/: CMakeLists.txt  package.xml
aik_constraint_vclip/src/: VclipCollisionConstraint.cpp
prioritized_acc_inverse_kinematics_solver/: CMakeLists.txt  README.md  package.xml
prioritized_acc_inverse_kinematics_solver/src/: PrioritizedAccInverseKinematicsSolver.cpp
sample/prioritized_acc_inverse_kinematics_solver_sample/: CMakeLists.txt  package.xml
sample/prioritized_acc_inverse_kinematics_solver_sample/config/: sample10_angular.cnoid  sample1_4limb.cnoid  sample2_4limb_unsolvable.cnoid  sample3_4limb_angle.cnoid  sample4_4limb_move.cnoid  sample5_com.cnoid  sample6_wolimit.cnoid  sample7_limit.cnoid  sample8_collision.cnoid  sample9_collision_move.cnoid
sample/prioritized_acc_inverse_kinematics_solver_sample/src/: CnoidPrioritizedAccInverseKinematicsSolverSamplePlugin.cpp  SampleSR1.cpp  sample10_angular.cpp  sample1_4limb.cpp  sample1_4limb.h  sample2_4limb_unsolvable.cpp  sample2_4limb_unsolvable.h  sample3_4limb_angle.cpp  sample3_4limb_angle.h  sample4_4limb_move.cpp  sample4_4limb_move.h  sample5_com.cpp  sample6_wolimit.cpp  sample7_limit.cpp  sample8_collision.cpp  sample9_collision_move.cpp
(+2 files in other folders)
